# stng

./: README-pypi.md  README.md  setup.cfg
stng/: __init__.py  __main__.py  dum_scanner.py  iter_funcs.py  scanners.py  search_result.py  stng.py  text_funcs.py
