[metadata]
name = stng
version = 0.3.1
description = sentence-transformer-based natural-language grep
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/stng
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    colorama ; platform_system == "Windows"
    html2text
    init_attrs_with_kwargs
    numpy
    sentence_transformers
    win_wildcard

[options.entry_points]
console_scripts =
    stng = stng.stng:main

[options.extras_require]
docopt_ng = docopt_ng
docopt = docopt
